Blazor.TodoApp with states and unit tests

--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoFilter.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoFilter.razor
@@ -1,4 +1,5 @@
-﻿@inherits TodoComponent
+﻿@namespace Skclusive.Blazor.TodoApp.Components
+@inherits TodoComponent
 
 <a class="@Class" style="cursor: pointer;" @onclick="OnFilter">
     @Title
