--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Section/TodoSection.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Section/TodoSection.razor
@@ -1,4 +1,5 @@
-﻿@inherits TodoComponent
+﻿@namespace Skclusive.Blazor.TodoApp.Components
+@inherits TodoComponent
 
 <section class="main">
     @if (HasTodos)
