--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Section/TodoToggleAll.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Section/TodoToggleAll.razor
@@ -1,4 +1,5 @@
-﻿@inherits TodoComponent
+﻿@namespace Skclusive.Blazor.TodoApp.Components
+@inherits TodoComponent
 
 <span>
     <input class="toggle-all"
