--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoCount.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoCount.razor
@@ -1,4 +1,5 @@
-﻿@inherits TodoComponent
+﻿@namespace Skclusive.Blazor.TodoApp.Components
+@inherits TodoComponent
 
 <span class="todo-count">
     <strong>@ActiveCount</strong> @ItemWord left
