--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoFooter.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoFooter.razor
@@ -1,4 +1,5 @@
-﻿@using Skclusive.Core.Component
+﻿@namespace Skclusive.Blazor.TodoApp.Components
+@using Skclusive.Core.Component
 
 @inherits PureComponentBase
 
