--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Header/TodoHeader.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Header/TodoHeader.razor
@@ -1,4 +1,5 @@
-﻿@inherits TodoComponent
+﻿@namespace Skclusive.Blazor.TodoApp.Components
+@inherits TodoComponent
 
 <header class="header">
     <h1>todos</h1>
