--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Item/TodoItemView.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Item/TodoItemView.razor
@@ -1,4 +1,5 @@
-﻿@using Skclusive.Mobx.Component
+﻿@namespace Skclusive.Blazor.TodoApp.Components
+@using Skclusive.Mobx.Component
 
 @inherits ObservableComponentBase
 
