--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Section/TodoToggleAll.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Section/TodoToggleAll.razor
@@ -1,21 +1,10 @@
 ﻿@namespace Skclusive.Blazor.TodoApp.Components
 @inherits TodoComponent
 
-<span>
-    <input class="toggle-all"
-           id="toggle-all"
-           type="checkbox"
-           checked="@AllCompleted"
-           @onchange="OnCompleteAll" />
-    <label htmlFor="toggle-all">Mark all as complete</label>
-</span>
-
-@code {
-
-    protected bool AllCompleted => TodoStore.CompletedCount == TodoStore.TotalCount;
-
-    protected void OnCompleteAll()
-    {
-       TodoStore.CompleteAll();
-    }
-}
+<input class="toggle-all"
+        id="toggle-all"
+        type="checkbox"
+        checked="@TodoStore.AllCompleted"
+        @onchange="@(() => TodoStore.CompleteAll())"
+        @onchange:preventDefault />
+<label for="toggle-all">Mark all as complete</label>
