--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/App.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/App.razor
@@ -1,4 +1,5 @@
-﻿<ReduxToolScript />
+﻿<DomHelpersScript />
+<ReduxToolScript />
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
