--- a/Skclusive.Blazor.FlightFinder/FlightFinder.Client/Components/Search.razor
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.Client/Components/Search.razor
@@ -1,11 +1,13 @@
-﻿<div class="col">
+﻿@inherits ObservableComponentBase
+
+<div class="col">
     <!-- Airport selection -->
     <div class="row py-1">
         <!-- From airport -->
         <div class="col pr-0">
             <div class="form-control d-flex">
                 <div><i>✈</i>&nbsp;&nbsp;From:</div>
-                <input list="airports" placeholder="..." @bind=criteria.FromAirport />
+                <input list="airports" placeholder="..." value="@criteria.FromAirport" @onchange="@(e => criteria.SetFromAirport(e.Value?.ToString()))" />
             </div>
         </div>
         <div class="col px-2 py-1 align-self-end arrow">➝</div>
@@ -14,7 +16,7 @@
         <div class="col pl-0">
             <div class="form-control d-flex">
                 <div><i>✈</i>&nbsp;&nbsp;To:</div>
-                <input list="airports" placeholder="..." @bind=criteria.ToAirport />
+                <input list="airports" placeholder="..." value="@criteria.ToAirport" @onchange="@(e => criteria.SetToAirport(e.Value?.ToString()))" />
             </div>
         </div>
     </div>
@@ -25,7 +27,7 @@
         <div class="col pr-0">
             <div class="form-control d-flex">
                 <div><i>🗓</i>&nbsp;&nbsp;Depart:</div>
-                <input type="date" @bind=criteria.OutboundDate @bind:format="yyyy-MM-dd" />
+                <input type="date" value="@(criteria.OutboundDate.ToString("yyyy-MM-dd"))" @onchange="@(e => criteria.SetOutboundDate(DateTime.ParseExact(e.Value?.ToString(), "yyyy-MM-dd", CultureInfo.CurrentCulture, DateTimeStyles.None)))" />
             </div>
         </div>
         <div class="col px-2 py-1 align-self-end arrow">➝</div>
@@ -34,7 +36,7 @@
         <div class="col pl-0">
             <div class="form-control d-flex">
                 <div><i>🗓</i>&nbsp;&nbsp;Arrive:</div>
-                <input type="date" @bind=criteria.ReturnDate @bind:format="yyyy-MM-dd" />
+                <input type="date" value="@(criteria.ReturnDate.ToString("yyyy-MM-dd"))" @onchange="@(e => criteria.SetReturnDate(DateTime.ParseExact(e.Value?.ToString(), "yyyy-MM-dd", CultureInfo.CurrentCulture, DateTimeStyles.None)))" />
             </div>
         </div>
     </div>
@@ -42,7 +44,7 @@
     <!-- Class / search -->
     <div class="row py-1 d-flex px-3">
         <div>
-            <select class="custom-select" @bind=criteria.TicketClass>
+            <select class="custom-select" value="@criteria.TicketClass.ToString()" @onchange="@(e => criteria.SetTicketClass((TicketClass)Enum.Parse(typeof(TicketClass), e.Value?.ToString())))">
                 <option value=@TicketClass.Economy>Economy</option>
                 <option value=@TicketClass.PremiumEconomy>Premium Economy</option>
                 <option value=@TicketClass.Business>Business</option>
@@ -63,19 +65,13 @@
     [Inject]
     public IAppService AppService {set; get;}
 
+    [Inject]
+    public IAppState AppState { set; get; }
+
     private async Task OnSearchAsync()
     {
         await AppService.SearchItinerariesAsync(criteria);
     }
 
-    private ISearchCriteria criteria = new SearchCriteria()
-    {
-        FromAirport = "LHR",
-
-        ToAirport = "SEA",
-
-        OutboundDate = DateTime.Now.Date,
-
-        ReturnDate = DateTime.Now.Date.AddDays(7)
-    };
+    private ISearchCriteria criteria => AppState.SearchCriteria;
 }
