--- a/Skclusive.Blazor.FlightFinder/FlightFinder.Client/Components/SearchResults.razor
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.Client/Components/SearchResults.razor
@@ -1,19 +1,18 @@
 ﻿@inherits ObservableComponentBase
 @inject IAppState AppState
-@inject IAppService AppService
 
 <div class="px-4">
 	@if (AppState.SearchResults.Any())
 	{
 		<div class="title">
 			<h2 class="my-3">@AppState.SearchResults.Count results</h2>
-			<select class="custom-select" @bind=chosenSortOrder>
-				<option value=@SortOrder.Price>Cheapest</option>
-				<option value=@SortOrder.Duration>Quickest</option>
-			</select>
+            <select class="custom-select" value="@AppState.SortOrder.ToString()" @onchange="@(e => AppState.SetSortOrder((SortOrder)Enum.Parse(typeof(SortOrder), e.Value?.ToString())))">
+                <option value=@SortOrder.Price>Cheapest</option>
+                <option value=@SortOrder.Duration>Quickest</option>
+            </select>
 		</div>
 
-		@foreach (var item in sortedSearchResults)
+		@foreach (var item in AppState.SortedSearchResults)
 		{
             <SearchResult @key="item" Itinerary="@item" Shortlisted="@IsShortlisted(item)" />
 		}
@@ -22,15 +21,5 @@
 
 @code
 {
-	// Private state
-	private SortOrder chosenSortOrder;
-
-	private IEnumerable<IItinerary> sortedSearchResults
-		=> chosenSortOrder == SortOrder.Price
-		? AppState.SearchResults.OrderBy(x => x.Price)
-		: AppState.SearchResults.OrderBy(x => x.TotalDurationHours);
-
-	enum SortOrder { Price, Duration }
-
     private bool IsShortlisted(IItinerary itinerary) => AppState.Shortlist.Any(it => it.Id == itinerary.Id);
 }
