--- a/Skclusive.Blazor.FlightFinder/FlightFinder.Client/_Imports.razor
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.Client/_Imports.razor
@@ -1,5 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Linq
+@using System
+@using System.Globalization
 @using System.Threading.Tasks
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Web
