--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Header/TodoHeader.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Header/TodoHeader.razor
@@ -15,7 +15,7 @@
     {
         if (!string.IsNullOrEmpty(title))
         {
-            TodoStore.AddTodo(title);
+            AppState.AddTodo(title);
         }
     }
 }
