--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoFilter.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/Components/Footer/TodoFilter.razor
@@ -10,7 +10,7 @@
     [Parameter]
     public Filter Filter { set; get; }
 
-    protected bool Selected => TodoStore.Filter == Filter;
+    protected bool Selected => AppState.Filter == Filter;
 
     protected string Class => Selected ? nameof(Selected).ToLower() : null;
 
@@ -20,7 +20,7 @@
     {
         if (!Selected)
         {
-            TodoStore.SetFilter(Filter);
+            AppState.SetFilter(Filter);
         }
     }
 }
