images relative paths updated

--- a/Skclusive.Blazor.Dashboard/Dashboard.View/Account/AccountProfile.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.View/Account/AccountProfile.razor
@@ -50,6 +50,6 @@
         City: "Los Angeles",
         Country: "USA",
         Timezone: "GTM-7",
-        Avatar: "/images/avatars/avatar_11.png"
+        Avatar: "./images/avatars/avatar_11.png"
     );
 }
