--- a/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/NotFound.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/NotFound.razor
@@ -18,7 +18,7 @@
                 <img
                     alt="Under development"
                     class="notfound-image"
-                    src="/images/undraw_page_not_found_su7k.svg"
+                    src="./images/undraw_page_not_found_su7k.svg"
                 />
             </div>
         </Grid>
