--- a/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/Profile.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/Profile.razor
@@ -5,7 +5,7 @@
             Src="@User.Avatar"
         />
     </NavLink>
-    <Typography Class="profile-name" 
+    <Typography Class="profile-name"
                 Variant="@TypographyVariant.H5">
         @User.Name
     </Typography>
@@ -18,7 +18,7 @@
 {
     private (string Name, string Avatar, string Bio) User = (
         "Shen Zhi",
-        "/images/avatars/avatar_11.png",
+        "./images/avatars/avatar_11.png",
         "Brain Director"
     );
 }
