footer link updated

--- a/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/Footer.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/Footer.razor
@@ -2,10 +2,10 @@
     <Typography Variant="@TypographyVariant.Body1">
         &copy;
         <a
-            href="https://skclusive.io/"
+            href="https://devias.io/"
             target="_blank"
         >
-            Skclusive IO
+            Devias Io
         </a>. 2019
     </Typography>
     <Typography Variant="@TypographyVariant.Caption">
