--- a/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/MainTopbar.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.View/Layout/MainTopbar.razor
@@ -1,6 +1,6 @@
 ﻿  <AppBar Class="topbar-root">
     <Toolbar>
-        <NavLink href="/" Match="@NavLinkMatch.Prefix">
+        <NavLink href="./" Match="@NavLinkMatch.Prefix">
             <AppLogo />
         </NavLink>
         <div class="topbar-flex-grow" />
