dependencies are updated

--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/ProductList/ProductsToolbar.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/ProductList/ProductsToolbar.razor
@@ -6,7 +6,7 @@
         <Button
             Color="@Color.Primary"
             Variant="@ButtonVariant.Contained">
-            Add product
+            Add
         </Button>
     </div>
     <div class="products-toolbar-row">
