--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Resource/SiteStyle.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Resource/SiteStyle.razor
@@ -15,7 +15,7 @@
     }
 
     body {
-        background-color: #f4f6f8 !important;
+        background-color: var(--theme-custom-content-background-color, #f4f6f8) !important;
         height: 100%;
     }
 
