--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/UserList/UsersToolbar.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/UserList/UsersToolbar.razor
@@ -6,7 +6,7 @@
         <Button
             Color="@Color.Primary"
             Variant="@ButtonVariant.Contained">
-            Add user
+            Add
         </Button>
     </div>
     <div class="users-toolbar-row">
