WeatherService is various rendering modes

--- a/Skclusive.Blazor.Material/Material.App.View/Pages/FetchData.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/Pages/FetchData.razor
@@ -1,5 +1,6 @@
 ﻿@page "/fetchdata"
-@inject HttpClient Http
+
+@inject IWeatherForecastService ForecastService
 
 <Typography
     Variant="@TypographyVariant.H5">
@@ -45,17 +46,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetJsonAsync<WeatherForecast[]>("sample-data/weather.json");
-    }
-
-    public class WeatherForecast
-    {
-        public DateTime Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        forecasts = await ForecastService.GetForecastAsync();
     }
 }
