--- a/Skclusive.Blazor.Material/Material.App.View/_Imports.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Skclusive.Blazor.Material.App.View
+@using Skclusive.Blazor.Material.App.View.Data
 @using Skclusive.Blazor.Material.App.View.Layout
 @using Skclusive.Blazor.Material.App.View.Resource
 
