messenger clone sample

--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Common/SearchInput.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Common/SearchInput.razor
@@ -1,7 +1,7 @@
 ﻿<Paper
     Class="search-input-root">
     <SearchIcon Class="search-input-icon" />
-    <Input
+    <StandardInput
         Class="@InputClass"
         DisableUnderline
         Placeholder="@Placeholder"
