--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Settings/SettingsNotification.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Settings/SettingsNotification.razor
@@ -20,25 +20,27 @@
                         Variant="@TypographyVariant.H6">
                         Notifications
                     </Typography>
-                    <FormControlLabel Label="Email">
-                        <ControlContent Context="Control">
-                            <Checkbox Color="@Color.Primary" DefaultChecked="true" />
-                        </ControlContent>
+                    <FormControlLabel
+                        Label="Email">
+                        <Checkbox
+                            Color="@Color.Primary"
+                            DefaultChecked="true" />
                     </FormControlLabel>
-                    <FormControlLabel Label="Push Notifications">
-                        <ControlContent Context="Control">
-                            <Checkbox Color="@Color.Primary" DefaultChecked="true" />
-                        </ControlContent>
+                    <FormControlLabel
+                        Label="Push Notifications">
+                        <Checkbox
+                            Color="@Color.Primary"
+                            DefaultChecked="true" />
                     </FormControlLabel>
                     <FormControlLabel Label="Text Messages">
-                        <ControlContent Context="Control">
-                            <Checkbox Color="@Color.Primary" DefaultChecked="false" />
-                        </ControlContent>
+                        <Checkbox
+                            Color="@Color.Primary"
+                            DefaultChecked="false" />
                     </FormControlLabel>
                     <FormControlLabel Label="Phone calls">
-                        <ControlContent Context="Control">
-                            <Checkbox Color="@Color.Primary" DefaultChecked="true" />
-                        </ControlContent>
+                        <Checkbox
+                            Color="@Color.Primary"
+                            DefaultChecked="true" />
                     </FormControlLabel>
                 </Grid>
                 <Grid
@@ -52,20 +54,23 @@
                         Variant="@TypographyVariant.H6">
                         Messages
                     </Typography>
-                    <FormControlLabel Label="Email">
-                        <ControlContent Context="Control">
-                            <Checkbox Color="@Color.Primary" DefaultChecked="true" />
-                        </ControlContent>
+                    <FormControlLabel
+                        Label="Email">
+                        <Checkbox
+                            Color="@Color.Primary"
+                            DefaultChecked="true" />
                     </FormControlLabel>
-                    <FormControlLabel Label="Push Notifications">
-                        <ControlContent Context="Control">
-                            <Checkbox Color="@Color.Primary" DefaultChecked="false" />
-                        </ControlContent>
+                    <FormControlLabel
+                        Label="Push Notifications">
+                        <Checkbox
+                            Color="@Color.Primary"
+                            DefaultChecked="false" />
                     </FormControlLabel>
-                    <FormControlLabel Label="Phone calls">
-                        <ControlContent Context="Control">
-                            <Checkbox Color="@Color.Primary" DefaultChecked="true" />
-                        </ControlContent>
+                    <FormControlLabel
+                        Label="Phone calls">
+                        <Checkbox
+                            Color="@Color.Primary"
+                            DefaultChecked="true" />
                     </FormControlLabel>
                 </Grid>
             </Grid>
