--- a/Skclusive.Blazor.Messenger/Messenger.App.View/Components/ChatView/ChatView.razor
+++ b/Skclusive.Blazor.Messenger/Messenger.App.View/Components/ChatView/ChatView.razor
@@ -2,49 +2,74 @@
 
 <div
     class="ChatView-Root">
-    <AppBar
-        Color="@Color.Default"
-        Elevation="0"
-        Position="@AppBarPosition.Relative"
-        Class="ChatView-Right ChatView-AppBar">
-        <Toolbar
-            DisableGutters
-            Class="ChatView-Toolbar">
-            <ConversationHead />
-        </Toolbar>
-    </AppBar>
     <Drawer
         Open
         Anchor="@Anchor.Left"
         PaperClass="ChatView-Drawer-Paper"
         Variant="@DrawerVariant.Permanent">
-        <ChatsHeader />
-        <div
-            class="ChatView-Search-Container">
-            <ChatSearch />
-        </div>
+        <Hidden
+            Only="@(new Breakpoint[] { Breakpoint.Medium, Breakpoint.Large, Breakpoint.ExtraLarge })"
+            Context="HiddenContext">
+            <div
+                class="@($"ChatView-Edit-Container {HiddenContext.Class}")">
+                <IconButton
+                    Class="ChatView-Edit-Icon">
+                    <EditIcon />
+                </IconButton>
+            </div>
+        </Hidden>
+        <Hidden
+            Only="@(new Breakpoint[] { Breakpoint.Small, Breakpoint.ExtraSmall })"
+            Context="HiddenContext">
+            <div
+                class="@HiddenContext.Class"
+                <ChatsHeader />
+            </div>
+            <div
+                class="@($"ChatView-Search-Container {HiddenContext.Class}")">
+                <ChatSearch />
+            </div>
+        </Hidden>
         <ChatList
             ChatItems="@ChatSamples.Chats" />
     </Drawer>
     <div
-        class="ChatView-Right ChatView-Content-Container">
-        <main
-            class="ChatView-Content">
-            <ChatSession />
-        </main>
+        class="ChatView-Main">
+        <AppBar
+            Color="@Color.Default"
+            Elevation="0"
+            Position="@AppBarPosition.Relative"
+            Class="ChatView-AppBar">
+            <Toolbar
+                DisableGutters
+                Class="ChatView-Toolbar">
+                <ConversationHead />
+            </Toolbar>
+        </AppBar>
         <div
-            class="ChatView-Sidebar-Container">
+            class="ChatView-Content-Container">
             <div
-                class="ChatView-Sidebar">
-                <ChatSettings />
+                class="ChatView-Middle-Container">
+                <main
+                    class="ChatView-Content">
+                    <ChatSession />
+                </main>
+                <footer
+                    class="ChatView-Footer">
+                    <ChatBar />
+                </footer>
             </div>
+            <Hidden
+                ExtraSmallDown
+                Context="HiddenContext">
+                <div
+                    class="@($"ChatView-Sidebar-Container {HiddenContext.Class}")">
+                    <div
+                        class="ChatView-Sidebar">
+                        <ChatSettings />
+                    </div>
+                </div>
+            </Hidden>
         </div>
-    </div>
-    <div
-        class="ChatView-Right ChatView-Footer-Container">
-        <footer
-            class="ChatView-Footer">
-            <ChatBar />
-        </footer>
     </div>
 </div>
