using skclusive 2.0.0 release candidates

--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Account/AccountDetails.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Account/AccountDetails.razor
@@ -22,7 +22,7 @@
                         Name="FirstName"
                         Required="true"
                         Value="@User.FirstName"
-                        Variant="@ControlVariant.Outlined" />
+                        Variant="@TextFieldVariant.Outlined" />
                 </Grid>
                 <Grid
                     Item
@@ -36,7 +36,7 @@
                         Name="LastName"
                         Required="true"
                         Value="@User.LastName"
-                        Variant="@ControlVariant.Outlined" />
+                        Variant="@TextFieldVariant.Outlined" />
                 </Grid>
                 <Grid
                     Item
@@ -50,7 +50,7 @@
                         Name="Email"
                         Required="true"
                         Value="@User.Email"
-                        Variant="@ControlVariant.Outlined" />
+                        Variant="@TextFieldVariant.Outlined" />
                 </Grid>
                 <Grid
                     Item
@@ -64,7 +64,7 @@
                         Required="true"
                         Type="number"
                         Value="@User.Phone"
-                        Variant="@ControlVariant.Outlined" />
+                        Variant="@TextFieldVariant.Outlined" />
                 </Grid>
                 <Grid
                     Item
@@ -78,7 +78,7 @@
                         Name="State"
                         Required="true"
                         Value="@User.State"
-                        Variant="@ControlVariant.Outlined" />
+                        Variant="@TextFieldVariant.Outlined" />
                 </Grid>
                 <Grid
                     Item
@@ -92,7 +92,7 @@
                         Name="Country"
                         Required="true"
                         Value="@User.Country"
-                        Variant="@ControlVariant.Outlined" />
+                        Variant="@TextFieldVariant.Outlined" />
                 </Grid>
             </Grid>
         </CardContent>
