--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Authentication/SignInPage.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Authentication/SignInPage.razor
@@ -56,7 +56,7 @@
         OnChange="@HandleEmailChange"
         Type="text"
         Value="@Email"
-        Variant="@ControlVariant.Outlined" />
+        Variant="@TextFieldVariant.Outlined" />
     <TextField
         Class="auth-form-text-field"
         FullWidth
@@ -65,7 +65,7 @@
         OnChange="@HandlePasswordChange"
         Type="password"
         Value="@Password"
-        Variant="@ControlVariant.Outlined" />
+        Variant="@TextFieldVariant.Outlined" />
     <Button
         Class="auth-form-submit-button"
         Color="@Color.Primary"
