--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Authentication/SignUpPage.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Authentication/SignUpPage.razor
@@ -25,7 +25,7 @@
         OnChange="@HandleFirstNameChange"
         Type="text"
         Value="@FirstName"
-        Variant="@ControlVariant.Outlined" />
+        Variant="@TextFieldVariant.Outlined" />
     <TextField
         Class="auth-form-text-field"
         FullWidth
@@ -34,7 +34,7 @@
         OnChange="@HandleLastNameChange"
         Type="text"
         Value="@LastName"
-        Variant="@ControlVariant.Outlined" />
+        Variant="@TextFieldVariant.Outlined" />
     <TextField
         Class="auth-form-text-field"
         FullWidth
@@ -43,7 +43,7 @@
         OnChange="@HandleEmailChange"
         Type="text"
         Value="@Email"
-        Variant="@ControlVariant.Outlined" />
+        Variant="@TextFieldVariant.Outlined" />
     <TextField
         Class="auth-form-text-field"
         FullWidth
@@ -52,7 +52,7 @@
         OnChange="@HandlePasswordChange"
         Type="password"
         Value="@Password"
-        Variant="@ControlVariant.Outlined" />
+        Variant="@TextFieldVariant.Outlined" />
     <div class="auth-form-policy-field">
         <Checkbox
             Checked="@Policy"
