--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Settings/SettingsPassword.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Settings/SettingsPassword.razor
@@ -13,7 +13,7 @@
                 Name="Password"
                 Required="true"
                 Value="@Values.Password"
-                Variant="@ControlVariant.Outlined" />
+                Variant="@TextFieldVariant.Outlined" />
             <TextField
                 Style="margin-top: 1rem;"
                 FullWidth
@@ -23,7 +23,7 @@
                 Name="Confirm"
                 Required="true"
                 Value="@Values.Confirm"
-                Variant="@ControlVariant.Outlined" />
+                Variant="@TextFieldVariant.Outlined" />
         </CardContent>
     <Divider />
     <CardActions>
