--- a/Skclusive.Blazor.Material/Material.App.View/_Imports.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/_Imports.razor
@@ -19,6 +19,7 @@
 @using Skclusive.Material.Progress
 @using Skclusive.Material.Button
 @using Skclusive.Material.Icon
+@using Skclusive.Material.Divider
 @using Skclusive.Material.Table
 @using Skclusive.Material.Script
 
