using release 2.0.0 libraries

--- a/Skclusive.Blazor.Material/Material.App.View/Layout/FullLayout.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/Layout/FullLayout.razor
@@ -1,6 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
-<MainLayout ContentStyle="padding: 30px;">
+<MainLayout
+    ContentStyle="padding: 30px;">
+    <TitleContent>
+        <Typography
+            Style="flex-grow: 1; margin-left: 20px;"
+            Variant="@TypographyVariant.H6"
+            NoWrap>
+            Skclusive-UI
+        </Typography>
+    </TitleContent>
     <BodyContent>
         @Body
     </BodyContent>
