--- a/Skclusive.Blazor.Material/Material.App.View/Layout/SmallLayout.razor
+++ b/Skclusive.Blazor.Material/Material.App.View/Layout/SmallLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<MiniLayout ContentStyle="padding: 30px;">
+<MiniLayout
+    ContentStyle="padding: 30px;">
     <BodyContent>
         @Body
     </BodyContent>
