Fixed spelling issue with Authentication.

--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/FullLayout.razor
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Layout/FullLayout.razor
@@ -118,7 +118,7 @@
 
         new NavigationItem
         {
-            Title = "Aunthentication",
+            Title = "Authentication",
             Path =  "signin",
             Icon =  @<LockOpenIcon />,
             Prefix =  true
