--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/_Imports.razor
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/_Imports.razor
@@ -6,7 +6,8 @@
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Web
 
-@using Skclusive.Blazor.FlightFinder.Components
+@using Skclusive.Blazor.FlightFinder.View
+@using Skclusive.Blazor.FlightFinder.View.Components
 
 @using Skclusive.Core.Component
 @using Skclusive.Mobx.Component
