--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/AppView.razor
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/AppView.razor
@@ -1,6 +1,7 @@
 ﻿@inherits DisposableComponentBase
 
-<ReduxToolScript />
+<InjectedResources />
+
 <div id="search-and-results-area">
     <div id="search-area" class="px-2 py-3">
         <Search />
