--- a/Skclusive.Blazor.Messenger/Messenger.App.View/Resource/MessengerResources.razor
+++ b/Skclusive.Blazor.Messenger/Messenger.App.View/Resource/MessengerResources.razor
@@ -2,7 +2,7 @@
 
 <ThemeProvider
     Theme="@Theme.Light" />
-<MaterialScripts />
-<MaterialStyles />
+
+<InjectedResources />
 
 <MessengerStyles />
