--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/_Imports.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/_Imports.razor
@@ -8,5 +8,5 @@
 @using Skclusive.Blazor.TodoApp.Components
 @using Skclusive.Blazor.TodoApp.Models
 
-@using Skclusive.Script.DevTools.Redux
+@using Skclusive.Core.Component
 @using Skclusive.Script.DomHelpers
