--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/App.razor
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/App.razor
@@ -1,5 +1,5 @@
-﻿<DomHelpersScript />
-<ReduxToolScript />
+﻿<InjectedResources />
+
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
