--- a/Skclusive.Blazor.TodoDesktop/TodoDesktop.Window/App.razor
+++ b/Skclusive.Blazor.TodoDesktop/TodoDesktop.Window/App.razor
@@ -1,4 +1,5 @@
-﻿<DomHelpersScript />
+﻿<InjectedResources />
+
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
